package com.zsx.design.pattern.behavioral.strategy;

public class ConcreteStrategyA implements Strategy {

    @Override
    public String strategyInterface() {
        return "StrategyA";
    }
}
