package com.zsx.design.pattern.behavioral.strategy;

public class ConcreteStrategyB implements Strategy {

    @Override
    public String strategyInterface() {
        return "StrategyB";
    }
}
