package com.zsx.design.pattern.behavioral.strategy;

public class ConcreteStrategyC implements Strategy {

    @Override
    public String strategyInterface() {
        return "StrategyC";
    }
}
