package com.zsx.design.pattern.behavioral.strategy;

public interface Strategy {

    String strategyInterface();
}
